--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
         "@material-ui/icons": "^4.0.0",
         "@material-ui/styles": "^4.5.0",
         "@pxblue/colors": "^3.0.0",
-        "@pxblue/icons-mui": "^2.0.0",
-        "@pxblue/react-components": "4.1.0-beta.0",
-        "@pxblue/react-progress-icons": "^2.0.0",
-        "@pxblue/react-themes": "^5.0.0",
+        "@pxblue/icons-mui": "^2.2.1",
+        "@pxblue/react-components": "^4.1.1",
+        "@pxblue/react-progress-icons": "^2.1.0",
+        "@pxblue/react-themes": "^5.0.3",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.43",
@@ -23,7 +23,7 @@
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.4.1",
+        "react-scripts": "3.4.3",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "typeface-open-sans": "^0.0.75",
@@ -60,8 +60,8 @@
         ]
     },
     "devDependencies": {
-        "@pxblue/eslint-config": "^2.0.0",
-        "@pxblue/prettier-config": "^1.0.0",
+        "@pxblue/eslint-config": "^2.0.4",
+        "@pxblue/prettier-config": "^1.0.2",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
